--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ pytz==2019.2
 whitenoise==4.1.3
 django-widgets-improved==1.5.0
 sqlparse==0.3.0
+dj-static==0.0.6
+django-toolbelt==0.0.1
+static3==0.7.0
